syntax = "proto3";

option java_multiple_files = true;

package com.test.bookstore;

message Book{
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

service BookService{
  rpc CreateBook(Book) returns(Book){}
  rpc UpdateBook(Book) returns(Book){}
  rpc GetBookById(Book) returns(Book){}
  rpc GetBookByTitle(Book) returns(stream Book){}
  rpc DeleteBookById(Book) returns(Book){}
}